--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "type": "symfony-bundle",
     "require": {
         "php": "^8.3",
+        "ext-zlib": "*",
         "symfony/config": "^6.4 || ^7.1",
         "symfony/dependency-injection": "^6.4 || ^7.1",
         "symfony/http-kernel": "^6.4 || ^7.1",
@@ -32,7 +33,7 @@
     "require-dev": {
         "phpstan/phpstan": "^2.0",
         "phpunit/phpunit": "^11.4",
-        "rector/rector": "dev-main",
+        "rector/rector": "^2.0",
         "symfony/cache": "^7.2"
     },
     "autoload": {
